log
Fri 12 May 2023 12:35:09 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
f436564
Fri 12 May 2023 12:35:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e80fb97
Fri 12 May 2023 12:39:03 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
86c68fb
Fri 12 May 2023 12:39:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:10: error: incompatible types when returning type ‘Heap’ {aka ‘struct Heap’} but ‘Heap *’ {aka ‘struct Heap *’} was expected
   42 |   return *heap;
      |          ^~~~~
heap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
caeaf98
Fri 12 May 2023 12:39:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0aec151
Fri 12 May 2023 12:40:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e4a68f1
Fri 12 May 2023 12:41:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b650d7
Fri 12 May 2023 12:42:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
07272c0
Fri 12 May 2023 12:46:11 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
e3d0ff1
Fri 12 May 2023 12:48:16 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6f6abad
Fri 12 May 2023 12:58:08 PM UTC: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|2
total_score: 20/70
c571b43
Fri 12 May 2023 01:00:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
5f8e2d4
Fri 12 May 2023 01:00:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
5846b11
Fri 12 May 2023 01:03:52 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
2a8c986
Fri 12 May 2023 01:04:35 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:50:3: error: implicit declaration of function ‘prinf’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   50 |   prinf("\n");
      |   ^~~~~
      |   printf
cc1: all warnings being treated as errors
Compilation failed
d9cc613
Fri 12 May 2023 01:04:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e17268c
Fri 12 May 2023 01:05:27 PM UTC: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|2
total_score: 20/70
1417d72
Fri 12 May 2023 01:05:58 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
85f4f0c
Fri 12 May 2023 01:06:25 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
72c05be
Fri 12 May 2023 01:09:06 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
96b2df9
Fri 12 May 2023 01:09:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
4cf72f3
Fri 12 May 2023 01:10:55 PM UTC: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  5|2
total_score: 35/70
ccd1533
Fri 12 May 2023 01:11:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
2a298b6
Fri 12 May 2023 01:12:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
c473a1b
Fri 12 May 2023 01:13:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
ca7497f
Fri 12 May 2023 01:14:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
5e8c45d
Fri 12 May 2023 01:28:09 PM UTC: 
 heap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:55:12: error: expected expression before ‘)’ token
   55 |   while(i!=)
      |            ^
Compilation failed
1e9c89f
Fri 12 May 2023 01:42:18 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
25d1557
Fri 12 May 2023 03:22:05 PM UTC: 
 heap.c | 75 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 73 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:91:101: error: invalid operands to binary > (have ‘int’ and ‘heapElem’ {aka ‘struct nodo’})
   91 |         if(pq->heapArray[i].priority > pq->heapArray[(i*2)+1].priority && pq->heapArray[i].priority > pq->heapArray[(i*2)+2])
      |                                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~
      |                                                                                           |                        |
      |                                                                                           int                      heapElem {aka struct nodo}
Compilation failed
1bee1c2
Fri 12 May 2023 03:22:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
91b491b
Fri 12 May 2023 03:23:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
ae188af
Fri 12 May 2023 03:25:40 PM UTC: 
 heap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  7|1
total_score: 55/70
0f65b2a
Fri 12 May 2023 03:27:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
b2bca95
Fri 12 May 2023 03:28:25 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
b43a131
Fri 12 May 2023 03:28:49 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
cd20343
